--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -189,11 +189,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 39.0,
+"row": 1,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,10 +203,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 70,
 "folded_lines": Array[int]([7]),
-"h_scroll_position": 0,
-"row": 4,
+"h_scroll_position": 66,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -227,5 +227,19 @@ state={
 "selection_from_line": 3,
 "selection_to_column": 22,
 "selection_to_line": 3,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/gui/title_screen.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 15.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
