--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -72,6 +72,12 @@ list=Array[Dictionary]([{
 "path": "res://src/player/player.gd"
 }, {
 "base": &"Control",
+"class": &"TitleScreen",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/gui/title_screen.gd"
+}, {
+"base": &"Control",
 "class": &"VirtualJoystick",
 "icon": "",
 "language": &"GDScript",
