--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -62,9 +62,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 1,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 1,
+"selection_to_column": 0,
+"selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
 
@@ -189,11 +193,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 44,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
+"h_scroll_position": 122,
+"row": 73,
+"scroll_position": 66.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,12 +207,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 70,
-"folded_lines": Array[int]([7]),
-"h_scroll_position": 66,
-"row": 3,
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 29,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -235,11 +243,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 15.0,
+"row": 14,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
