--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/gui/title_screen.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/scene_3/", "res://src/scenes/scene_2/", "res://src/gui/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_2/scene_2.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_3/", "res://src/scenes/scene_2/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/gui/title_screen.tscn", "res://src/game_singleplayer.tscn")
-current_scene="res://src/gui/title_screen.tscn"
+open_scenes=PackedStringArray("res://src/gui/title_screen.tscn", "res://src/game_singleplayer.tscn", "res://src/scenes/scene_2/scene_2.tscn", "res://gui/pause_menu_singleplayer.tscn")
+current_scene="res://gui/pause_menu_singleplayer.tscn"
 center_split_offset=-241
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://src/game.gd", "res://gui/pause_menu.gd", "res://src/gui/title_screen.gd"]
-selected_script=""
+open_scripts=["res://src/game.gd", "res://gui/pause_menu.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
+selected_script="res://src/game.gd"
 open_help=["SceneTree"]
 script_split_offset=112
 list_split_offset=0
