--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=127
+dock_hsplit_2=168
 dock_hsplit_3=-193
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -20,25 +20,25 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_2/scene_2.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_3/", "res://src/scenes/scene_2/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_3/", "res://src/scenes/scene_2/", "res://src/scenes/scene_2/level/", "res://src/scenes/scene_1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/gui/title_screen.tscn", "res://src/game_singleplayer.tscn", "res://src/scenes/scene_2/scene_2.tscn", "res://gui/pause_menu_singleplayer.tscn")
-current_scene="res://gui/pause_menu_singleplayer.tscn"
+open_scenes=PackedStringArray("res://src/gui/title_screen.tscn", "res://src/game_singleplayer.tscn", "res://gui/pause_menu_singleplayer.tscn", "res://src/scenes/scene_3/scene_3.tscn", "res://src/scenes/scene_3/level/level_3.tscn", "res://src/game_splitscreen.tscn", "res://src/scenes/scene_2/scene_2_spleetscreen.tscn", "res://src/scenes/scene_2/level/level_2.tscn", "res://src/scenes/scene_2/scene_2.tscn")
+current_scene="res://src/scenes/scene_2/scene_2.tscn"
 center_split_offset=-241
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/game.gd", "res://gui/pause_menu.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
-selected_script="res://src/game.gd"
-open_help=["SceneTree"]
+open_scripts=["res://src/game.gd", "res://src/game_splitscreen.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/scenes/scene_2/scene_2_spleetscreen.gd", "res://src/scenes/scene_3/scene_3.gd", "res://src/gui/title_screen.gd"]
+selected_script="res://src/scenes/scene_2/scene_2.gd"
+open_help=["Camera2D", "SceneTree"]
 script_split_offset=112
 list_split_offset=0
 
