--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -59,6 +59,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://levels/level_4/level_4.gd"
 }, {
+"base": &"Node",
+"class": &"Level_2",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_2/scene_2.gd"
+}, {
 "base": &"Control",
 "class": &"PauseMenu",
 "icon": "",
