--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/images/platformer.webp")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/scenes/scene_4/", "res://src/scenes/scene_4/levels/", "res://assets/", "res://assets/sounds/", "res://assets/images/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/tiles/catastrophi_tiles.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/scenes/scene_4/", "res://src/scenes/scene_4/levels/", "res://assets/", "res://assets/tiles/", "res://assets/sounds/", "res://assets/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://src/scenes/scene_4/levels/GrassLevel.tscn", "res://src/scenes/scene_3/scene_3.tscn", "res://src/scenes/scene_4/switch_level.tscn", "res://src/scenes/scene_4/levels/LevelList.tscn", "res://src/gui/title_screen.tscn", "res://gui/pause_menu.tscn", "res://src/game_singleplayer.tscn")
-current_scene="res://src/scenes/scene_4/switch_level.tscn"
+current_scene="res://src/scenes/scene_4/levels/LevelList.tscn"
 center_split_offset=-216
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://src/game.gd", "res://src/game_splitscreen.gd", "res://src/scenes/scene_4/Level.gd", "res://src/scenes/scene_4/levels/LevelListContainer.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/scenes/scene_3/scene_3.gd", "res://src/scenes/scene_4/switch_level.gd", "res://src/gui/title_screen.gd"]
-selected_script=""
+selected_script="res://src/scenes/scene_4/Level.gd"
 open_help=["BaseButton", "CenterContainer"]
 script_split_offset=112
 list_split_offset=0
