--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -280,12 +280,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(62),
-"column": 37,
+"breakpoints": PackedInt32Array(),
+"column": 1,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 7,
-"row": 52,
-"scroll_position": 44.0,
+"h_scroll_position": 0,
+"row": 95,
+"scroll_position": 87.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
