--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,32 +12,31 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=127
+dock_hsplit_2=199
 dock_hsplit_3=-193
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_levels/levels.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_menu/", "res://src/scenes/scene_levels_list/", "res://src/scenes/scene_levels/", "res://assets/tiles/", "res://assets/sounds/", "res://assets/images/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_levels/level_2/level.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_menu/", "res://src/scenes/scene_levels/", "res://src/scenes/scene_levels/level_2/", "res://src/scenes/scene_levels/level_2/level_map/", "res://src/scenes/scene_levels/level_1/level_map/", "res://gui/", "res://assets/tiles/", "res://assets/sounds/", "res://assets/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/scenes/main.tscn", "res://src/scenes/scene_levels_list/levels_list.tscn")
-current_scene="res://src/scenes/main.tscn"
+open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/scenes/scene_levels/level_2/level_map/level_map.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://gui/pause_menu_singleplayer.tscn", "res://src/scenes/scene_levels/level_2/level.tscn")
+current_scene="res://src/scenes/scene_levels/level_2/level.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/game.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels_list/levels_listLevel.gd", "res://src/scenes/scene_levels_list/level_list_VBox.gd", "res://src/scenes/main.gd", "res://next_level.gd", "res://src/scenes/Scene.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
-selected_script="res://src/scenes/main.gd"
+open_scripts=["res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://gui/pause_menu.gd", "res://src/scenes/scene_2/scene_2.gd"]
+selected_script="res://src/scenes/scene_2/scene_2.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=0
