--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -66,7 +66,19 @@ list=Array[Dictionary]([{
 "path": "res://levels/level_4/level_4.gd"
 }, {
 "base": &"Node",
+"class": &"Level_1",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_levels/level_1/level.gd"
+}, {
+"base": &"Node",
 "class": &"Level_23",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_levels/level_2/level.gd"
+}, {
+"base": &"Node",
+"class": &"Level_333",
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/scenes/scene_2/scene_2.gd"
