--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_levels/level_2/level.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_menu/", "res://src/scenes/scene_levels/", "res://src/scenes/scene_levels/level_2/", "res://src/scenes/scene_levels/level_2/level_map/", "res://src/scenes/scene_levels/level_1/level_map/", "res://gui/", "res://assets/tiles/", "res://assets/sounds/", "res://assets/images/")
+dock_filesystem_selected_paths=PackedStringArray("res://default_bus_layout.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_menu/", "res://src/scenes/scene_levels/", "res://src/scenes/scene_levels/level_2/level_map/", "res://src/player/", "res://src/gui/", "res://gui/", "res://assets/tiles/", "res://assets/sounds/", "res://assets/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/scenes/scene_levels/level_2/level_map/level_map.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://gui/pause_menu_singleplayer.tscn", "res://src/scenes/scene_levels/level_2/level.tscn")
-current_scene="res://src/scenes/scene_levels/level_2/level.tscn"
+open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://src/player/player.tscn", "res://src/game_singleplayer.tscn", "res://music.tscn")
+current_scene="res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://gui/pause_menu.gd", "res://src/scenes/scene_2/scene_2.gd"]
-selected_script="res://src/scenes/scene_2/scene_2.gd"
-open_help=[]
+open_scripts=["res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/scenes/scene_2/scene_2.gd"]
+selected_script="res://src/player/player.gd"
+open_help=["CharacterBody2D"]
 script_split_offset=112
 list_split_offset=0
 
