--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -63,7 +63,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
-"scroll_position": 0.0,
+"scroll_position": 4.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 7,
@@ -95,7 +95,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
+"column": 3,
+"folded_lines": Array[int]([77]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 0.0,
+"row": 101,
+"scroll_position": 77.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,10 +147,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -189,16 +189,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 10,
-"scroll_position": 4.0,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 22,
+"selection_from_column": 0,
 "selection_from_line": 10,
-"selection_to_column": 23,
-"selection_to_line": 10,
+"selection_to_column": 0,
+"selection_to_line": 11,
 "syntax_highlighter": "GDScript"
 }
 
@@ -210,9 +210,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 6.0,
-"selection": false,
+"row": 8,
+"scroll_position": 3.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 8,
+"selection_to_column": 9,
+"selection_to_line": 9,
 "syntax_highlighter": "GDScript"
 }
 
@@ -295,16 +299,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
+"row": 3,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 18,
-"selection_to_column": 0,
-"selection_to_line": 21,
+"selection_from_column": 7,
+"selection_from_line": 3,
+"selection_to_column": 20,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -313,12 +317,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 0.0,
-"selection": false,
+"row": 6,
+"scroll_position": 3.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 5,
+"selection_to_column": 21,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -373,16 +381,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 6,
-"selection_to_column": 28,
-"selection_to_line": 6,
+"row": 17,
+"scroll_position": 5.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
