--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/player/player.tscn", "res://src/game_singleplayer.tscn", "res://src/players/player_knight/player_knight.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn")
-current_scene="res://src/players/player_knight/player_knight.tscn"
+current_scene="res://src/scenes/scene_levels/level_1/level.tscn"
 center_split_offset=-172
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/scene_2/scene_2.gd"]
+open_scripts=["res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
 selected_script="res://src/players/player_knight/player_knight.gd"
-open_help=["AnimatedSprite2D", "CharacterBody2D"]
+open_help=["AnimatedSprite2D", "CharacterBody2D", "Node", "Node2D"]
 script_split_offset=112
 list_split_offset=46
 window_rect=Rect2i(70, 64, 954, 704)
