--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -59,15 +59,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 4.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 0,
+"selection_from_column": 7,
 "selection_from_line": 7,
-"selection_to_column": 79,
+"selection_to_column": 22,
 "selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
@@ -105,12 +105,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 23,
 "folded_lines": Array[int]([77]),
 "h_scroll_position": 0,
-"row": 101,
-"scroll_position": 75.0,
-"selection": false,
+"row": 103,
+"scroll_position": 62.0,
+"selection": true,
+"selection_from_column": 20,
+"selection_from_line": 103,
+"selection_to_column": 23,
+"selection_to_line": 103,
 "syntax_highlighter": "GDScript"
 }
 
@@ -246,7 +250,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 61,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -320,13 +324,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 3.0,
+"row": 14,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 5,
-"selection_to_column": 21,
-"selection_to_line": 5,
+"selection_from_line": 13,
+"selection_to_column": 79,
+"selection_to_line": 13,
 "syntax_highlighter": "GDScript"
 }
 
@@ -423,11 +427,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([]),
+"column": 15,
+"folded_lines": Array[int]([106, 140, 143, 161, 192, 212, 216]),
 "h_scroll_position": 0,
-"row": 81,
-"scroll_position": 71.0,
+"row": 236,
+"scroll_position": 121.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
